--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -9349,3 +9349,12 @@ textarea.form-control {
     margin-left: 20px;
     margin-top: -15px;
 }
+
+.form-width-parent {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.form-width-child {
+  width: 50%;
+}
