переделан личный кабинет на отдельную страницу с технологиями vue и vuetify

--- a/frontend/web/css/personal-area.css
+++ b/frontend/web/css/personal-area.css
@@ -5,3 +5,11 @@
 .no-border {
     box-shadow: 0 0 0 0 rgb(0 0 0 / 20%), 0 0 0 0 rgb(0 0 0 / 14%), 0 0 0 0 rgb(0 0 0 / 12%) !important;
 }
+
+.text-color {
+    color: #6c757d!important;
+}
+
+.v-application--wrap {
+    min-height: auto!important;
+}
