создание страницы для карточек отелей с слайдером отфильтрованных отелей и просмотром их из слайдера. А так же создание хлебных крошек

--- a/frontend/web/css/hotels.css
+++ b/frontend/web/css/hotels.css
@@ -29,7 +29,7 @@
 }
 
 .home-demo .item {
-    background: #ff3f4d;
+    background: #FFF;
 }
 .home-demo h2 {
     color: #FFF;
@@ -39,5 +39,8 @@
     font-style: italic;
     font-weight: 300;
 }
+
+
+/*test*/
 
 
